# CPP-OpenGL-ray-based-renderer

./: .gitignore  CMakeLists.txt  README.md  build_octree.glsl  compexec.sh  main.cpp  shader.glsl  test_data.py  voxel.glsl
data/: terrain.py  test_data.py  utils.py
